# simple-raspi-car

./: .gitignore  .gitmodules  readme.md
Arduino/: readme.md
Arduino/raspi-car-arduino/: raspi-car-arduino.ino
Raspi/: readme.md
Raspi/client/cpp/: compile.sh  driver.cpp  driver.h  run_picar.cpp  run_raspi_car.cpp
Raspi/client/python3/: driver.py  raspi_car_demo.py  run_raspi_car.py
Raspi/server/: CMakeLists.txt
Raspi/server/include/: pi_driver.h  pi_serial.h  pi_udp.h
Raspi/server/src/: pi_driver.cpp  pi_serial.cpp  pi_udp.cpp  raspicar_server.cpp
